[package]
name = "local_server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
local-ip-address = "0.6"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"